name:                vaultaire-collector-ceilometer
version:             0.2.2
synopsis:            Vaultaire Collector for Ceilometer
homepage:            https://github.com/anchor/vaultaire-collector-ceilometer
license:             BSD3
license-file:        LICENSE
author:              Oswyn Brent
maintainer:          engineering@anchor.net.au
copyright:           2014 Anchor Systems and others
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.18

library
  hs-source-dirs:    lib
  default-language:  Haskell2010

  exposed-modules:   Ceilometer.Types
                     Ceilometer.Process

  build-depends:     base >=4.7 && <4.8,
                     aeson,
                     text,
                     bytestring,
                     hslogger,
                     pipes,
                     unordered-containers,
                     siphash,
                     marquise >= 3.1.0,
                     amqp,
                     optparse-applicative,
                     time,
                     old-locale,
                     mtl,
                     vaultaire-collector-common >= 0.3.0,
                     vaultaire-common,
                     stm

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

executable vaultaire-collector-ceilometer
  hs-source-dirs:    src
  default-language:  Haskell2010
  main-is:           Main.hs

  build-depends:     base >=4.7 && <4.8,
                     vaultaire-collector-ceilometer

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

test-suite           tests
  hs-source-dirs:    test
  main-is:           Main.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  build-depends:     base >=3 && <5,
                     containers >=0.5 && <0.6,
                     aeson,
                     mtl,
                     pipes,
                     time,
                     HUnit,
                     hspec,
                     QuickCheck,
                     bytestring,
                     text,
                     --required for conduit
                     monad-control >= 0.3.1 && < 0.4,                     
                     unordered-containers,
                     vaultaire-collector-ceilometer,
                     vaultaire-common,
                     vaultaire-collector-common >= 0.3.0,
                     marquise >= 3.1.0

  ghc-options:       -threaded
  ghc-prof-options:  -auto-all
