name:                vaultaire-collector-ceilometer
version:             0.6.0
synopsis:            Vaultaire Collectors for Openstack/Ceilometer
description:         Provides two collectors for openstack/ceilometer.
                     vaultaire-collector-ceilometer collects metric data from
                     RabbitMQ and vaultaire-collector-os-error collects error
                     data from RabbitMQ.
homepage:            https://github.com/anchor/vaultaire-collector-ceilometer
license:             BSD3
license-file:        LICENSE
author:              Oswyn Brent
maintainer:          engineering@anchor.net.au
copyright:           2014-2015 Anchor Systems and others
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.18

source-repository head
  type:                git
  location:            git@github.com:anchor/vaultaire-collector-ceilometer.git

library
  hs-source-dirs:    lib
  default-language:  Haskell2010

  exposed-modules:   Vaultaire.Collector.Ceilometer.Types
                     Vaultaire.Collector.Ceilometer.Process
                     Vaultaire.Collector.Ceilometer.Process.Common
                     Vaultaire.Collector.Ceilometer.Process.Image
                     Vaultaire.Collector.Ceilometer.Process.Instance
                     Vaultaire.Collector.Ceilometer.Process.IP
                     Vaultaire.Collector.Ceilometer.Process.Snapshot
                     Vaultaire.Collector.Ceilometer.Process.Volume

  build-depends:     base >=4.7 && <4.8,
                     aeson,
                     text,
                     bytestring,
                     hslogger,
                     pipes,
                     unordered-containers,
                     siphash,
                     marquise >= 3.1.0,
                     amqp,
                     optparse-applicative,
                     time,
                     old-locale,
                     bifunctors,
                     mtl,
                     vaultaire-collector-common >= 0.4.0,
                     vaultaire-common,
                     zeromq4-haskell

  ghc-options:       -O2
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

executable vaultaire-collector-ceilometer
  hs-source-dirs:    src
  default-language:  Haskell2010
  main-is:           Main.hs

  build-depends:     base >=4.7 && <4.8,
                     vaultaire-collector-ceilometer

  ghc-options:       -O2
                     -threaded
                     -Wall
                     -Wwarn
                     -fwarn-tabs

  ghc-prof-options:  -fprof-auto

test-suite           tests
  hs-source-dirs:    test
  main-is:           Main.hs
  type:              exitcode-stdio-1.0
  default-language:  Haskell2010
  build-depends:     base >=3 && <5,
                     containers >=0.5 && <0.6,
                     aeson,
                     mtl,
                     pipes,
                     time,
                     HUnit,
                     hspec,
                     QuickCheck,
                     bytestring,
                     text,
                     zeromq4-haskell,
                     unordered-containers,
                     vaultaire-collector-ceilometer,
                     vaultaire-common,
                     vaultaire-collector-common >= 0.4.0,
                     marquise >= 3.1.0

  ghc-options:       -threaded
                     -Wall
                     -Wwarn
  ghc-prof-options:  -auto-all
